--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,12 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "ng serve (without preLaunchTask)",
+      "type": "chrome",
+      "request": "launch",
+      "url": "http://localhost:4200/"
+    },
+    {
       "name": "ng serve",
       "type": "chrome",
       "request": "launch",
